# legado-tauri-crack

./: .gitignore  .npmrc  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jni_bridge.rs  lib.rs  main.rs
src-tauri/src/bookshelf/: mod.rs
src-tauri/src/browser_probe_tauri/: bridge.rs  commands.rs  create.rs  lifecycle.rs  mod.rs  navigation.rs  state.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: bookshelf.rs  booksource.rs  browser_probe.rs  cache.rs  comic.rs  config.rs  extension.rs  frontend.rs  mod.rs  script.rs  sync.rs  system.rs  tts.rs  web_server.rs
src-tauri/src/config/: mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/extension/: mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/repository/: mod.rs
src-tauri/src/script/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tts/: mod.rs
src-tauri/src/web_server/: mod.rs
src/stores/: preferences.ts
