# legado-tauri-cracked Cargo.toml (从原作者闭源二进制还原)
# 原始开发者: q3499 | 解密去授权重构版
# cargo hash: index.crates.io-1949cf8c6b5b557f

[package]
name = "legado-tauri-cracked"
version = "0.1.0"
edition = "2021"

[lib]
name = "legado_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "legado_tauri"
path = "src/main.rs"

[dependencies]
# === 从 .so 提取的全部 131 个 crate ===
# aes-0.9.0
# anyhow-1.0.102
# arrayvec-0.7.6
# axum-0.8.9
# base64-0.22.1
# boa_ast-0.21.1
# boa_engine-0.21.1
# boa_gc-0.21.1
# boa_interner-0.21.1
# boa_parser-0.21.1
# boa_string-0.21.1
# bumpalo-3.20.2
# bytes-1.11.1
# cesu8-1.1.0
# cfb-0.7.3
# chacha20-0.10.0
# cipher-0.5.1
# color_quant-1.1.0
# cookie-0.18.1
# cookie_store-0.22.1
# crc32fast-1.5.0
# cssparser-0.37.0
# dashmap-6.1.0
# des-0.9.0
# digest-0.10.7
# digest-0.11.3
# dom_query-0.27.0
# dpi-0.1.2
# encoding_rs-0.8.35
# fdeflate-0.3.7
# fixedbitset-0.5.7
# flate2-1.1.9
# fontdb-0.23.0
# form_urlencoded-1.2.2
# getrandom-0.3.4
# gif-0.14.2
# glob-0.3.3
# h2-0.4.14
# hashbrown-0.14.5
# hashbrown-0.16.1
# hashbrown-0.17.1
# heck-0.5.0
# hmac-0.13.0
# html5ever-0.38.0
# html5ever-0.39.0
# htmlize-1.1.0
# http-1.4.0
# httparse-1.10.1
# httpdate-1.0.3
# hyper-1.9.0
# icu_collections-2.0.0
# icu_normalizer-2.0.1
# idna-1.1.0
# image-0.25.10
# indexmap-2.14.0
# infer-0.19.0
# inotify-0.11.1
# ipnet-2.12.0
# itoa-1.0.18
# jni-0.21.1
# jni-0.22.4
# markup5ever-0.38.0
# markup5ever-0.39.0
# matchit-0.8.4
# memchr-2.8.0
# mime-0.3.17
# mime_guess-2.0.5
# mio-1.2.0
# moka-0.12.15
# ndk-0.9.0
# notify-8.2.0
# once_cell-1.21.4
# open-5.3.5
# parking-2.2.1
# parking_lot-0.12.5
# parking_lot_core-0.9.12
# phf-0.13.1
# phf_shared-0.13.1
# png-0.18.1
# qrcode-0.14.1
# rand-0.10.1
# rand-0.9.4
# rand_chacha-0.9.0
# rand_core-0.9.5
# redb-4.1.0
# regex-1.12.3
# regress-0.10.5
# reqwest-0.13.3
# ring-0.17.14
# rustls-0.23.40
# scraper-0.27.0
# selectors-0.38.0
# semver-1.0.28
# serde-1.0.228
# serde_core-1.0.228
# serde_json-1.0.149
# servo_arc-0.4.3
# sha1-0.10.6
# sha1-0.11.0
# sha2-0.10.9
# sha2-0.11.0
# slab-0.4.12
# slotmap-1.1.1
# small_btree-0.1.0
# smallvec-1.15.1
# socket2-0.6.3
# specta-2.0.0-rc.25
# string_cache-0.9.0
# tagptr-0.2.0
# tao-0.35.2
# tauri-2.11.1
# tendril-0.5.0
# time-0.3.47
# tinyvec-1.11.0
# tokio-1.52.3
# tower-0.5.3
# tungstenite-0.29.0
# untrusted-0.9.0
# url-2.5.8
# urlencoding-2.1.3
# urlpattern-0.3.0
# utf8_iter-1.0.4
# uuid-1.23.1
# walkdir-2.5.0
# want-0.3.1
# weezl-0.1.12
# wry-0.55.1
# xsum-0.1.6
# zerovec-0.11.6
# zip-8.6.0
# zopfli-0.8.3

# 主要依赖 (整理后):
tauri = { version = "2.11", features = ["protocol-asset"] }
boa_engine = "0.21"
boa_parser = "0.21"
boa_ast = "0.21"
reqwest = { version = "0.13", features = ["json","cookies","stream","socks"] }
rustls = "0.23"
ring = "0.17"
redb = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
scraper = "0.27"
dom_query = "0.27"
jni = "0.22"
moka = { version = "0.12", features = ["sync"] }
axum = "0.8"
wry = "0.55"
tao = "0.35"

[profile.release]
opt-level = 3
lto = true
strip = true
